                          - Added option to use Original Title instead of localized one (option USEORIGTITLE)
                          - Added option to USECURL and FLAGS for both curl and wget
                          - Fixed Businessdata (opening earnings in BUSINESSSHORT)
                          - Fixed searching on iMDB.
- v2.9u - Dec  26th, 2017 - Fix main and find for new layout, no user reviews and screens anymore.
- v2.9t - Feb  13th, 2017 - Removed trailing '|' for languages, comments, countries, certs; '/' for genres.
- v2.9s - May  28th, 2016 - Fixed psxc-imdb not getting all data due to certain grep versions
			    treating the pages a binary.
			  - Fixed error with Directors having a single quote in their name.
			  - Fix incorrect links for sorted Titles when the dest has changed.
- v2.9r - Nov. 16th, 2013 - Fixed psxc-imdb not limiting Country, Language, Cert and Runtime
			    to their configured number
			  - Fixed bug where iMDB has an empty Language, Country, Genre, Cert or Runtime item
			    in between seperators, causing a |_ to be prepended to a single item.
			    See the language for Lucky Miles (2007) for example.
- v2.9q - Feb. 17th, 2013 - Fixed psxc-imdb-find not finding anything
- v2.9p - Dec. 22nd, 2011 - Fixed TAGLINE output having "See more >>"
			  - Fixed bug in psxc-imdb-rescan with symlinks in the recursively scanned
			    dir pointing to dirs in that dir. (Thanks to PCFiL for noticing)
			  - Fixed bug with psxc-imdb-rescan not rescanning dirs containing nukedir_style
			    even when not at the start of the dirname.
			  - Added EXCLUDES in psxc-imdb-rescan so incomplete and missingfile indicators
			    would not appear in sorted-dirs in case you have sorting enabled.
			  - Now psxc-imdb-rescan scans all nfo's found in a dir. If both contain an imdblink,
			    only the last one scanned will have it's info saved, announced, etc...
			    A warning message is sent to stderr when more than one nfo is found.